--- a/sample_js_code/index.html
+++ b/sample_js_code/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Understanding the typescript working !!</title>
-    <script src="jstes.js" defer></script>
+    <script src="example.js" defer></script>
 </head>
 <body>
     <input type="number" id="input1" placeholder="Number 1">
